(fix) card 292, added spacing under search form on homepage and removed margin under #follow-us menu

--- a/assets/css/partials/homepage.scss
+++ b/assets/css/partials/homepage.scss
@@ -99,6 +99,7 @@ hr {
 
 .blog-selector {
   margin-bottom: $gutter;
+  padding-bottom: $gutter;
 
   h2 {
     margin-top: $gutterHalf;
